--- a/MNIST_classification.ipynb
+++ b/MNIST_classification.ipynb
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 146,
+      "execution_count": null,
       "metadata": {
         "id": "-ZGRnOQ5ZL_B"
       },
@@ -121,7 +121,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 147,
+      "execution_count": null,
       "metadata": {
         "id": "jUuGpUJFbxnV"
       },
@@ -153,7 +153,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 148,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -239,7 +239,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 149,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -840,7 +840,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 150,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -875,7 +875,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 151,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -926,7 +926,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 152,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -979,7 +979,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 153,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1014,7 +1014,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 154,
+      "execution_count": null,
       "metadata": {
         "id": "dKQW4no6ZL_K"
       },
@@ -1042,7 +1042,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 155,
+      "execution_count": null,
       "metadata": {
         "id": "QWbFBiAoZL_O"
       },
@@ -1053,7 +1053,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 156,
+      "execution_count": null,
       "metadata": {
         "id": "4dAVZrvfZL_O"
       },
@@ -1098,7 +1098,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 157,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1650,7 +1650,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 158,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1993,7 +1993,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 159,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2435,7 +2435,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 160,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2892,7 +2892,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 161,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2928,7 +2928,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 162,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2965,7 +2965,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 163,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3002,7 +3002,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 164,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3028,7 +3028,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 165,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3065,7 +3065,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 166,
+      "execution_count": null,
       "metadata": {
         "id": "PIBJMbkwZL_p"
       },
@@ -3097,7 +3097,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 167,
+      "execution_count": null,
       "metadata": {
         "id": "49wQQzUg0dRB"
       },
@@ -3109,7 +3109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 168,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3135,7 +3135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 169,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3170,7 +3170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 170,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3214,7 +3214,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 171,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3249,7 +3249,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 172,
+      "execution_count": null,
       "metadata": {
         "id": "UCEcaJ64ZL_r"
       },
@@ -3260,7 +3260,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 173,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3297,7 +3297,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 174,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3396,7 +3396,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 175,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3438,12 +3438,12 @@
         "id": "WFM8pLLCzd9F"
       },
       "source": [
-        "Para fornecer as imagens no formato pedido pelo ImageDataGenerator, as colocaremos no formato 28x28 em um novo dataframe."
+        "Para fornecer as imagens no formato pedido pelo ImageDataGenerator, as colocaremos no formato 28x28. Depois, voltamos ao formato 784x1 em um novo dataframe."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 176,
+      "execution_count": null,
       "metadata": {
         "id": "6wV7yfOS_i2W"
       },
@@ -3475,7 +3475,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 177,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3528,7 +3528,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 178,
+      "execution_count": null,
       "metadata": {
         "id": "gMyTFfAUGb-L"
       },
@@ -3557,7 +3557,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 179,
+      "execution_count": null,
       "metadata": {
         "id": "B2OxxUr8HjQW"
       },
@@ -3588,7 +3588,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 186,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3641,7 +3641,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 181,
+      "execution_count": null,
       "metadata": {
         "id": "3Vme13yzIUtk",
         "colab": {
@@ -3677,7 +3677,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 182,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3723,7 +3723,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 183,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -4173,7 +4173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 184,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -4210,7 +4210,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 185,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
